Howitworks Ui change

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,10 @@
 
 @theme{
    --gradient-primary: linear-gradient(to right, #9810fa, oklch(59.2% 0.249 0.584));
+   --hero-primary: 
 }
 
 *{
    cursor: none;
 }
+
