--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,28 @@
 @import "tailwindcss";
 
-@theme{
-   --gradient-primary: linear-gradient(to right, #9810fa, oklch(59.2% 0.249 0.584));
-   --hero-primary: 
+@theme {
+  --gradient-primary: linear-gradient(
+    to right,
+    #9810fa,
+    oklch(59.2% 0.249 0.584)
+  );
+  --hero-primary:  
+;
 }
 
-*{
-   cursor: none;
+* {
+  cursor: none;
 }
 
+@keyframes gradient-x {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
+}
+.animate-gradient-x {
+  background-size: 200% auto;
+  animation: gradient-x 4s linear infinite;
+}
